--- a/eShopSolucation.Data/eShopSolucation.Data.csproj
+++ b/eShopSolucation.Data/eShopSolucation.Data.csproj
@@ -16,6 +16,8 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="3.1.3" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="3.1.3" />
   </ItemGroup>
 
 </Project>
