--- a/eShopSolucation.BackendApi/eShopSolucation.BackendApi.csproj
+++ b/eShopSolucation.BackendApi/eShopSolucation.BackendApi.csproj
@@ -1,21 +1,20 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-  <FrameworkReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.2" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.4.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Primitives" Version="3.1.3" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <ProjectReference Include="..\eShopSolucation.Application\eShopSolucation.Application.csproj" />
     <ProjectReference Include="..\eShopSolucation.Data\eShopSolucation.Data.csproj" />
     <ProjectReference Include="..\eShopSolucation.ViewModels\eShopSolucation.ViewModels.csproj" />
     <ProjectReference Include="..\Utilities\eShopSolucation.Utilities.csproj" />
   </ItemGroup>
+
 
 </Project>
