Create RESTful API

--- a/eShopSolucation.BackendApi/eShopSolucation.BackendApi.csproj
+++ b/eShopSolucation.BackendApi/eShopSolucation.BackendApi.csproj
@@ -16,5 +16,9 @@
     <ProjectReference Include="..\Utilities\eShopSolucation.Utilities.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\user-content\" />
+  </ItemGroup>
+
 
 </Project>
