--- a/eShopSolucation.BackendApi/appsettings.json
+++ b/eShopSolucation.BackendApi/appsettings.json
@@ -1,6 +1,6 @@
 {
-    "ConnectionStrings": {
-      "eShopSolutionDb": "Data Source=localhost;Initial Catalog=eShopSolution;User Id=sa;Password=huavanan9x"
+  "ConnectionStrings": {
+    "eShopSolutionDb": "Data Source=localhost;Initial Catalog=eShopSolution;User Id=sa;Password=huavanan9x"
   },
   "Logging": {
     "LogLevel": {
@@ -10,5 +10,9 @@
     }
   },
 
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Tokens": {
+    "Key": "0123456789ABCDEF",
+    "Issuer": "https://webapi.tedu.com.vn"
+  }
 }
