--- a/eShopSolucation.Application/eShopSolucation.Application.csproj
+++ b/eShopSolucation.Application/eShopSolucation.Application.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Primitives" Version="3.1.3" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.5.1" />
   </ItemGroup>
 
   <ItemGroup>
