--- a/eShopSolucation.AdminApp/Properties/launchSettings.json
+++ b/eShopSolucation.AdminApp/Properties/launchSettings.json
@@ -1,11 +1,10 @@
 ﻿{
-  "$schema": "http://json.schemastore.org/launchsettings.json",
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:49412",
-      "sslPort": 44328
+      "applicationUrl": "http://localhost:64911",
+      "sslPort": 44360
     }
   },
   "profiles": {
@@ -16,11 +15,10 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "eShopSolucation.BackendApi": {
+    "eShopSolucation.AdminApp": {
       "commandName": "Project",
-      "launchBrowser": false,
-      "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:5001",
+      "launchBrowser": true,
+      "applicationUrl": "https://localhost:5002",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
